# ResearchHarness

./: Cargo.toml  README.md
docs/: agents.md  architecture.md  configuration.md  data-model.md  experiment-lifecycle.md  implementation-plan.md  memory-and-compounding.md
src/: cli.rs  config.rs  core.rs  lib.rs  main.rs  orchestrator.rs  policy.rs
src/agents/: cli_runner.rs  mock.rs  mod.rs
src/execution/: archive.rs  metrics.rs  mod.rs  runner.rs  workspace.rs
src/memory/: learning.rs  mod.rs  store.rs
tests/: cli.rs  orchestrator.rs
