[package]
name = "research-harness"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Rust automation engine for autonomous experiment loops"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
toml = "0.8"
wait-timeout = "0.2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"
